# elaborato_ING_SW

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md
Doc/UML/: UML_model.mdj
cmake_modules/: FindPkgConfig.cmake  FindSQLite3.cmake
code/: Configuration.cpp  Configuration.hpp  DBMaster.cpp  DBMaster.hpp  MedH.cpp  MedH.hpp  RefBuilder.cpp  main.cpp
code/gui/: AboutDialog.cpp  AboutDialog.hpp  AddPatientDialog.cpp  AddPatientDialog.hpp  AddPrescriptionDialog.cpp  AddPrescriptionDialog.hpp  Dialog.hpp  DrugWindow.cpp  DrugWindow.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  PatientWindow.cpp  PatientWindow.hpp  PrescriptionWindow.cpp  PrescriptionWindow.hpp  RefBuilder.cpp  RefBuilder.hpp  Widgets.cpp  Widgets.hpp  Window.hpp
code/gui/view/: CustomWidgets.cpp  CustomWidgets.hpp
code/hdr/: ActivePrinciple.hpp  Address.hpp  Bill.hpp  Configuration.hpp  DBMaster.hpp  Drug.hpp  LoginModel.hpp  MedH.hpp  Medicine.hpp  Patient.hpp  Prescription.hpp  PrescriptionRequest.hpp  RefBuilder.hpp  log.hpp
code/hdr/controller/: AddPatientDialog.hpp  AddPrescriptionDialog.hpp  Application.hpp  Dialog.hpp  Login.hpp  LoginController.hpp  Main.hpp  MainController.hpp  Patient.hpp  PatientController.hpp  Register.hpp  SelectDateByDialog.hpp  SelectDateDialog.hpp  SelectDateDialogController.hpp
code/hdr/factory/: DialogFactory.hpp
code/hdr/interfaces/: ISerializable.hpp
code/hdr/model/: Application.hpp  Authentication.hpp  AuthenticationModel.hpp  Doctor.hpp  Drug.hpp  LoginModel.hpp  Main.hpp  Patient.hpp  PatientTreeModel.hpp  Prescription.hpp  PrescriptionTreeModel.hpp
code/hdr/time_utilities/: Date.hpp  DateBy.hpp  Time.hpp
code/hdr/users/: Doctor.hpp  Pharmacist.hpp  Secretary.hpp  User.hpp
code/hdr/view/: AddPatientDialog.hpp  AddPrescriptionDialog.hpp  Application.hpp  Dialog.hpp  Login.hpp  LoginView.hpp  Main.hpp  MainView.hpp  Patient.hpp  PatientView.hpp  SelectDateByDialog.hpp  SelectDateDialog.hpp  SelectDateDialogView.hpp
code/interfaces/: IObserver.hpp  ISerializable.cpp  ISerializable.hpp  ISubject.cpp  ISubject.hpp
code/mains/: main.cpp  main_bundle.cpp  main_cli.cpp  main_window.cpp
code/model/: Authentication.cpp  Authentication.hpp  Doctor.cpp  Doctor.hpp  Drug.cpp  Drug.hpp  Patient.cpp  Patient.hpp  Prescription.cpp  Prescription.hpp
code/src/: ActivePrinciple.cpp  Address.cpp  Bill.cpp  Configuration.cpp  DBMaster.cpp  Drug.cpp  LoginModel.cpp  MedH.cpp  Medicine.cpp  Patient.cpp  Prescription.cpp  PrescriptionRequest.cpp  RefBuilder.cpp  log.cpp  main.cpp
code/src/controller/: AddPatientDialog.cpp  AddPrescriptionDialog.cpp  Application.cpp  Dialog.cpp  Login.cpp  LoginController.cpp  Main.cpp  MainController.cpp  Patient.cpp  PatientController.cpp  Register.cpp  SelectDateByDialog.cpp  SelectDateDialog.cpp  SelectDateDialogController.cpp
code/src/factory/: DialogFactory.cpp
code/src/interfaces/: ISerializable.cpp  ISubject.cpp
code/src/model/: Authentication.cpp  Doctor.cpp  Drug.cpp  LoginModel.cpp  Patient.cpp  PatientTreeModel.cpp  Prescription.cpp  PrescriptionTreeModel.cpp
code/src/time_utilities/: Date.cpp  DateBy.cpp  Time.cpp
code/src/users/: Doctor.cpp  Pharmacist.cpp  Secretary.cpp  User.cpp
code/src/view/: AddPatientDialog.cpp  AddPrescriptionDialog.cpp  Application.cpp  Dialog.cpp  Login.cpp  LoginView.cpp  Main.cpp  MainView.cpp  Patient.cpp  PatientView.cpp  SelectDateByDialog.cpp  SelectDateDialog.cpp  SelectDateDialogView.cpp
code/utils/: Date.cpp  Date.hpp  DateBy.cpp  Time.cpp  os.hpp  stringUtils.hpp
database/: db.sqlite3
doc/: MedH.asta  class.asta  class_min.asta
doc/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000000_000003.html  dir_000000_000004.html  dir_000001_000002.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  dir_000002_000004.html  dir_000002_000005.html  dir_000004_000003.html  dir_000004_000005.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  dir_050edd66366d13764f98250ef6db77f6_dep.map  dir_3aa1edc5113eb71597736b7aa27b7402.html  dir_3aa1edc5113eb71597736b7aa27b7402.js  dir_3aa1edc5113eb71597736b7aa27b7402_dep.map  dir_3aa1edc5113eb71597736b7aa27b7402_dep.md5  dir_57a7082de014cca77dd242f079f7e66c.html  dir_57a7082de014cca77dd242f079f7e66c.js  dir_b52c80b7fda602b2cf8039a593632a4a.html  dir_b52c80b7fda602b2cf8039a593632a4a.js  dir_b74f67ff05e200b1f1db8d84c0f76c07.html  dir_b74f67ff05e200b1f1db8d84c0f76c07.js  dir_b74f67ff05e200b1f1db8d84c0f76c07_dep.map  dir_b74f67ff05e200b1f1db8d84c0f76c07_dep.md5  dir_c2a361fb7ebed33ab8c423b509dc8d4e.html  dir_c2a361fb7ebed33ab8c423b509dc8d4e.js  dir_c2a361fb7ebed33ab8c423b509dc8d4e_dep.map  dir_c2a361fb7ebed33ab8c423b509dc8d4e_dep.md5  doxygen.css  files.html  files.js  files_dup.js  functions.html  functions_0x7e.html  functions_b.html  (+88 more)
doc/doxygen/latex/: annotated.tex  dir_050edd66366d13764f98250ef6db77f6.tex  dir_050edd66366d13764f98250ef6db77f6_dep.md5  dir_3aa1edc5113eb71597736b7aa27b7402.tex  dir_3aa1edc5113eb71597736b7aa27b7402_dep.md5  dir_57a7082de014cca77dd242f079f7e66c.tex  dir_b52c80b7fda602b2cf8039a593632a4a.tex  dir_b74f67ff05e200b1f1db8d84c0f76c07.tex  files.tex  refman.tex  (+4 more)
doc/tex/: Aggiunta_prescrizione.png.bak  Class_diagram_min.png.bak  Vista_farmaci.png.bak  Vista_paziente.png.bak  class_diagram.png.bak  elaborato.aux  elaborato.tex  elaborato.toc  use_case.aux  use_case.tex  use_case.toc
glade/: mainWindow.glade  mainWindow_old.glade  med-h.icns  style.css
glade/old/: mainWindow.glade
inc/: catch.hpp
lang/: it_IT.dic
test/: test.cpp
tmp/: comuni  comuni.json  config.json  db.sqlite3  med-h-Info.plist
(+1084 files in other folders)
